--- a/index.css
+++ b/index.css
@@ -241,23 +241,38 @@ a {
 }
 
 .firefly-1 {
-    top: 10%; 
+    bottom: 5%; 
     left: 10%;
 }
 
 .firefly-2 {
-    top: 50%; 
+    bottom: 20%; 
     left: 10%;
 }
 
 .firefly-3 {
-    top: 30%; 
+    bottom: 10%; 
     right: 10%;
 }
 
 .firefly-4 {
-    top: 70%; 
+    bottom: 15%; 
     right: 10%;
+}
+
+.moon-container {
+    opacity: 0;
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    z-index: -75;
+}
+
+.moon-container img {
+    width: 100%;
+    max-width: 100px;
+    border-radius: 50%;
+    animation: moon-glow 4s infinite alternate, up-down 20s infinite;
 }
 
 .left-info-container {
@@ -435,6 +450,15 @@ a {
     }
     to {
       box-shadow: 0 0 10px 5px rgb(251, 255, 0);
+    }
+}
+
+@keyframes moon-glow {
+    from {
+      box-shadow: 0 0 15px -10px white;
+    }
+    to {
+      box-shadow: 0 0 15px 10px white;
     }
 }
 
