--- a/index.css
+++ b/index.css
@@ -353,9 +353,17 @@ a {
     margin-bottom: 0px;
 }
 
-.project-container {
+.outer-project-container {
     width: 100%;
-    background: tan;
+}
+
+.inner-project-container {
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: warp;
 }
 
 .site-container {
