--- a/index.css
+++ b/index.css
@@ -366,6 +366,25 @@ a {
     flex-wrap: warp;
 }
 
+.search-input-container {
+    width: 100%;
+}
+
+.report-h1-container {
+    width: 100%;
+}
+
+.report-h1-container h1 {
+    text-align: center;
+    margin: 0px;
+}
+
+.input-container {
+    width: 100%;
+}
+
+.
+
 .site-container {
     width: 100%;
     height: 600px;
