--- a/index.css
+++ b/index.css
@@ -362,7 +362,7 @@ a {
     max-width: 800px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     margin: 50px auto;
 }
@@ -404,6 +404,10 @@ a {
     background-color: white;
     margin-top: 15px;
     padding: 0px 10px;
+}
+
+.project-image-container img {
+    width: 100%;
 }
 
 .site-container {
