--- a/index.css
+++ b/index.css
@@ -364,7 +364,7 @@ a {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin: 50px auto;
+    margin: 25px auto;
 }
 
 .search-input-container {
@@ -375,11 +375,11 @@ a {
     flex-wrap: wrap;
 }
 
-.report-h1-container {
+.project-h1-container {
     width: 100%;
 }
 
-.report-h1-container h1 {
+.project-h1-container h1 {
     text-align: center;
     margin: 0px;
 }
@@ -405,7 +405,7 @@ a {
 }
 
 .project-container {
-    width: 48%;
+    width: 49%;
     border: 1px solid #31708e;
     border-radius: 5px;
     background-color: white;
@@ -424,6 +424,10 @@ a {
 .project-type-container h2 {
     color: white;
     padding: 5px;
+}
+
+.project-type-container i {
+    float: right;
 }
 
 .Codepen {
