--- a/index.css
+++ b/index.css
@@ -442,11 +442,6 @@ a {
     color: #8fc1e3;
 }
 
-
-.codepen-shrink {
-    display: none;
-}
-
 .Codepen {
     display: flex;
     justify-content: center;
@@ -456,6 +451,19 @@ a {
     border-radius: 5px;
     margin: 15px 0px;
     padding: 5px 0;
+}
+
+.codepen-modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1000; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9); 
 }
 
 .project-image-container img {
