--- a/index.css
+++ b/index.css
@@ -381,7 +381,9 @@ a {
 }
 
 .project-h1-container {
+    opacity: 0;
     width: 100%;
+    transform: translateY(-100px);
 }
 
 .project-h1-container h1 {
@@ -391,8 +393,10 @@ a {
 }
 
 .input-container {
+    opacity: 0;
     width: 100%;
     margin-top: 15px;
+    transform: translateY(-100px);
 }
 
 .input-container input {
@@ -411,6 +415,7 @@ a {
 }
 
 .project-container {
+    opacity: 0;
     width: 33%;
     border: 1px solid #31708e;
     border-radius: 5px;
@@ -536,6 +541,12 @@ a {
     background-color: white;
     border-radius: 5px;
     padding: 5px 15px;
+}
+
+.article-container {
+    width: 100%;
+    height: 600px;
+    background: paleturquoise;
 }
 
 .contact-container {
