--- a/index.css
+++ b/index.css
@@ -549,10 +549,32 @@ a {
     background: paleturquoise;
 }
 
-.contact-container {
+.contact-outer-container {
     width: 100%;
     height: 600px;
     background: orange;
+}
+
+.contact-inner-container {
+    width: 100%;
+    max-width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contact-icon-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contact-info-container {
+    width: 100%;
+    padding: 15px;
 }
 
 @-webkit-keyframes hvr-wobble-vertical {
