--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ a {
     display: block;
     width: 0;
     height: 2px;
-    background: #8b9dc3;
+    background: #3b5998;
     -webkit-transition: width 0.5s ease;
     -moz-transition: width 0.5s ease;
     -o-transition: width 0.5s ease;
@@ -562,6 +562,7 @@ a {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 0 auto;
 }
 
 .contact-icon-container {
@@ -572,10 +573,26 @@ a {
     flex-wrap: wrap;
 }
 
+.svg-container {
+    width: 25%;
+    padding: 10px;
+    text-align: center;
+}
+
+.svg-container svg {
+    font-size: 5em;
+}
+
+.svg-container h2 {
+    text-align: center;
+}
+
 .contact-info-container {
     width: 100%;
     padding: 15px;
 }
+
+
 
 @-webkit-keyframes hvr-wobble-vertical {
     16.65% {
