--- a/index.css
+++ b/index.css
@@ -551,8 +551,8 @@ a {
 
 .contact-outer-container {
     width: 100%;
-    height: 600px;
     background: orange;
+    padding: 50px 0;
 }
 
 .contact-inner-container {
@@ -577,6 +577,8 @@ a {
     width: 25%;
     padding: 10px;
     text-align: center;
+    border-radius: 5px;
+    background: white;
 }
 
 .svg-container svg {
@@ -589,6 +591,17 @@ a {
 
 .contact-info-container {
     width: 100%;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 15px;
+}
+
+.contact-info {
+    width: 49%;
+    background: white;
+    border-radius: 5px;
     padding: 15px;
 }
 
