--- a/index.css
+++ b/index.css
@@ -569,12 +569,12 @@ a {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .svg-container {
-    width: 25%;
+    width: 24%;
     padding: 10px;
     text-align: center;
     border-radius: 5px;
