--- a/index.css
+++ b/index.css
@@ -372,14 +372,6 @@ a {
     margin: 0 auto;
 }
 
-.search-input-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
 .project-h1-container {
     opacity: 0;
     width: 100%;
@@ -392,26 +384,12 @@ a {
     margin: 0px;
 }
 
-.input-container {
-    opacity: 0;
-    width: 100%;
-    margin-top: 15px;
-    transform: translateY(-100px);
-}
-
-.input-container input {
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    outline: none;
-    padding: 5px 10px;
-}
-
 .project-outer-container {
     display: flex;
     align-items: stretch;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-top: 15px;
 }
 
 .project-container {
@@ -543,11 +521,68 @@ a {
     padding: 5px 15px;
 }
 
-.article-container {
+.outer-article-container {
     width: 100%;
-    height: 600px;
-    background: paleturquoise;
 }
+
+.inner-article-container {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 25px auto;
+    padding: 0px 15px;
+}
+
+.search-input-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.article-h1-container {
+    width: 100%;
+}
+
+.article-h1-container h1 {
+    margin: 0px;
+}
+
+.input-container {
+    opacity: 0;
+    width: 100%;
+    margin-top: 15px;
+    transform: translateY(-100px);
+}
+
+.input-container input {
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+    padding: 5px 10px;
+}
+
+.article-info-container {
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.article-container {
+    width: 24%;
+    border: 1px solid #3b5998;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 15px;
+}
+
 
 .contact-outer-container {
     width: 100%;
