--- a/index.css
+++ b/index.css
@@ -205,7 +205,7 @@ a {
 
 .info-container {
     width: 100%; 
-    background-image: url(images/info-background.png);
+    background-image: url(images/lake.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -355,7 +355,7 @@ a {
 
 .outer-project-container {
     width: 100%;
-    background-image: url(images/project-background.png);
+    background-image: url(images/desert.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -477,9 +477,121 @@ a {
     width: 100%;
 }
 
+.outer-article-container {
+    opacity: 0;
+    width: 100%;
+    background-image: url(images/mountain.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 25px 15px;
+}
+
+.inner-article-container {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin: 25px auto;
+    
+}
+
+.search-input-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.article-h1-container {
+    opacity: 0;
+    width: 100%;
+    transform: translateY(-100px);
+}
+
+.article-h1-container h1 {
+    margin: 0px;
+    color: white;
+}
+
+.input-container {
+    opacity: 0;
+    width: 100%;
+    margin-top: 15px;
+    transform: translateY(-100px);
+}
+
+.input-container input {
+    width: 100%;
+    border: 1px solid black;
+    border-radius: 5px;
+    outline: none;
+    padding: 5px 10px;
+}
+
+.article-info-container {
+    width: 100%;
+    display: flex;
+    align-items: stretch;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.article-container {
+    opacity: 0;
+    width: 100%;
+    border: 1px solid #3b5998;
+    border-radius: 5px;
+    padding: 15px;
+    margin-top: 10px;
+    transform: translateX(-100px);
+    background-color: white;
+}
+
+.article-title-container {
+    width: 100%;
+    clear:both;
+}
+
+.article-title-container h3 {
+    float: left;
+    margin: 0px;
+}
+
+.article-expand-container {
+    float: right;
+    cursor: pointer;
+}
+
+.article-expand-container {
+    font-size: 20px;
+}
+
+.article-message {
+    display: none;
+}
+
+.article-close {
+
+}
+
+.article-open {
+
+}
+
+.article-description {
+    margin-bottom: 0px;
+}
+
 .site-container {
     width: 100%;
-    background: #607e58;
+    background-image: url(images/forest.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 50px 0px;
 }
 
@@ -522,112 +634,12 @@ a {
     padding: 5px 15px;
 }
 
-.outer-article-container {
-    opacity: 0;
-    width: 100%;
-}
-
-.inner-article-container {
-    width: 100%;
-    max-width: 1000px;
-    display: flex;
-    align-items: stretch;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    margin: 25px auto;
-    padding: 0px 15px;
-}
-
-.search-input-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.article-h1-container {
-    opacity: 0;
-    width: 100%;
-    transform: translateY(-100px);
-}
-
-.article-h1-container h1 {
-    margin: 0px;
-}
-
-.input-container {
-    opacity: 0;
-    width: 100%;
-    margin-top: 15px;
-    transform: translateY(-100px);
-}
-
-.input-container input {
-    width: 100%;
-    border: 1px solid black;
-    border-radius: 5px;
-    outline: none;
-    padding: 5px 10px;
-}
-
-.article-info-container {
-    width: 100%;
-    display: flex;
-    align-items: stretch;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.article-container {
-    opacity: 0;
-    width: 100%;
-    border: 1px solid #3b5998;
-    border-radius: 5px;
-    padding: 15px;
-    margin-top: 10px;
-    transform: translateX(-100px);
-}
-
-.article-title-container {
-    width: 100%;
-    clear:both;
-}
-
-.article-title-container h3 {
-    float: left;
-    margin: 0px;
-}
-
-.article-expand-container {
-    float: right;
-    cursor: pointer;
-}
-
-.article-expand-container {
-    font-size: 20px;
-}
-
-.article-message {
-    display: none;
-}
-
-.article-close {
-
-}
-
-.article-open {
-
-}
-
-.article-description {
-    margin-bottom: 0px;
-}
-
-
 .contact-outer-container {
     width: 100%;
-    background: orange;
+    background-image: url(images/mountain-night.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 50px 0;
 }
 
@@ -639,6 +651,7 @@ a {
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 .contact-icon-container {
