--- a/index.css
+++ b/index.css
@@ -354,12 +354,28 @@ a {
 }
 
 .outer-project-container {
+    position: relative;
     width: 100%;
+    opacity: 0;
     background-image: url(images/desert.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 25px 0px;
+    z-index: -2;
+}
+
+.project-background-dark-overlay {
+    position: absolute;
+    width: 100%;
+    opacity: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: -1;
 }
 
 .inner-project-container {
