--- a/index.css
+++ b/index.css
@@ -362,7 +362,7 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 25px 0px;
-    z-index: -2;
+    z-index: 1;
 }
 
 .project-background-dark-overlay {
@@ -375,10 +375,11 @@ a {
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: -1;
+    z-index: 2;
 }
 
 .inner-project-container {
+    position: relative;
     width: 100%;
     max-width: 1000px;
     display: flex;
@@ -386,6 +387,7 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 0 auto;
+    z-index: 10
 }
 
 .project-h1-container {
