--- a/index.css
+++ b/index.css
@@ -21,6 +21,36 @@ a {
     color: #f9d71c;
 }
 
+.no-js #loader { 
+    display: none;  
+}
+.js #loader { 
+    display: block; 
+    position: absolute; 
+}
+.pre-loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100vh;
+	z-index: 9999;
+    background: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.loader-circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: yellow;
+    margin: 0 10px;
+    transform: translateY(50px);
+}
+
 .master-outer-container {
     width: 100%;
 }
@@ -37,6 +67,7 @@ a {
     left: 0;
     z-index: 1000;
 }
+
 
 .nav-button-container {
     opacity: 0;
