--- a/index.css
+++ b/index.css
@@ -764,6 +764,7 @@ a {
 
 .contact-outer-container {
     width: 100%;
+    opacity: 0;
     background-image: url(images/mountain-night.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -795,15 +796,21 @@ a {
     padding: 10px;
     text-align: center;
     border-radius: 5px;
-    background: white;
+    
 }
 
 .svg-container svg {
+    opacity: 0;
+    color: white;
     font-size: 5em;
+    transform: rotateY(180deg);
 }
 
 .svg-container h2 {
+    opacity: 0;
+    color: white;
     text-align: center;
+    transform: rotateX(180deg);
 }
 
 .contact-info-container {
