--- a/index.css
+++ b/index.css
@@ -840,15 +840,19 @@ a {
     background: white;
     border-radius: 5px;
     padding: 15px;
-    transform: scale(1.5)
+    transform: scale(0.5)
 }
 
 .contact-info-title {
+    opacity: 0;
     margin-top: 0px;
+    transform: scale(1.25);
 }
 
 .contact-info p {
+    opacity: 0;
     margin-bottom: 0px;
+    transform: scale(1.5);
 }
 
 @-webkit-keyframes hvr-wobble-vertical {
